SUBDIRS = sctplib

EXTRA_DIST = \
   AUTHORS \
   COPYING \
   ChangeLog \
   INSTALL \
   README \
   TODO \
   sctplib.lsm \
   config.nmake \
   Makefile.nmake \
   README.win32 \
   win32-setup.sh  \
   debian/source/format \
   debian/source/lintian-overrides \
   debian/upstream/signing-key.asc \
   debian/upstream/metadata \
   debian/compat \
   debian/libsctplib-dev.install \
   debian/libsctplib1.install \
   debian/rules \
   debian/sctplib-doc.doc-base \
   debian/sctplib-doc.docs \
   debian/control \
   debian/copyright \
   debian/watch \
   debian/changelog \
   freebsd/sctplib/distinfo \
   freebsd/sctplib/pkg-descr \
   freebsd/sctplib/test-packaging \
   freebsd/sctplib/Makefile \
   rpm/sctplib.spec

ACLOCAL_AMFLAGS = -I m4
