SUBDIRS = sctplib

EXTRA_DIST = \
   AUTHORS \
   COPYING \
   ChangeLog \
   INSTALL \
   README \
   TODO \
   config.nmake \
   Makefile.nmake \
   README.win32 \
   win32-setup.sh  \
   debian/changelog \
   debian/control \
   debian/copyright \
   debian/libsctplib1.install \
   debian/libsctplib1.symbols \
   debian/libsctplib-dev.install \
   debian/rules \
   debian/sctplib-doc.doc-base \
   debian/sctplib-doc.docs \
   debian/source/format \
   debian/source/lintian-overrides \
   debian/upstream/metadata \
   debian/upstream/signing-key.asc \
   debian/watch \
   freebsd/sctplib/distinfo \
   freebsd/sctplib/Makefile \
   freebsd/sctplib/pkg-descr \
   freebsd/sctplib/test-packaging \
   rpm/sctplib.spec

ACLOCAL_AMFLAGS = -I m4
