SUBDIRS = sctplib

EXTRA_DIST = \
   AUTHORS \
   ChangeLog \
   config.nmake \
   COPYING \
   debian/changelog \
   debian/control \
   debian/copyright \
   debian/libsctplib1.install \
   debian/libsctplib1.symbols \
   debian/libsctplib-dev.install \
   debian/rules \
   debian/sctplib-doc.doc-base \
   debian/sctplib-doc.docs \
   debian/source/format \
   debian/source/lintian-overrides \
   debian/upstream/metadata \
   debian/upstream/signing-key.asc \
   debian/watch \
   freebsd/sctplib/distinfo \
   freebsd/sctplib/Makefile \
   freebsd/sctplib/pkg-descr \
   freebsd/sctplib/test-packaging \
   INSTALL \
   Makefile.nmake \
   README.md \
   README.win32 \
   rpm/sctplib.spec \
   TODO \
   win32-setup.sh

ACLOCAL_AMFLAGS = -I m4
