####### kdevelop will overwrite this part!!! (begin)##########



####### kdevelop will overwrite this part!!! (end)############

SUBDIRS = docs sctp manual programs 

# bin_PROGRAMS = sctplib
# sctplib_SOURCES = 
# sctplib_LDADD   = ./sctp/libsctp.a ./socketwrapper/libsocketwrapper.a

# set the include path found by configure
# INCLUDES= $(all_includes)

# the library search path.
# sctplib_LDFLAGS = $(all_libraries) 
                                                                                
